# inotify

./: Inotify.hs  inotify.cabal
src/: Inotify.hs
src/Posix/Inotify/: Bindings.hsc
