cabal-version: 2.2

name: inotify
version: 0

library
  if os(windows) || os(darwin)
    buildable: False
  build-depends:
    base ^>= 4.18 || ^>= 4.19 || ^>= 4.20,
    bytestring,
    os-string,
    unix,
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    PatternSynonyms
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  exposed-modules: Inotify
  ghc-options: -Wall
  hs-source-dirs: src
  other-modules:
    Posix.Inotify.Bindings
